--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=jbr_test
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -48,6 +48,10 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
+
+WHATSAPP_INSTANCE=instance24533
+WHATSAPP_TOKEN=jozfr3196xyi96qw
+WHATSAPP_URL="https://api.ultramsg.com/instance24533/"
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
