--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
   ],
   "license": "MIT",
   "require": {
-    "php": "^8.0.2",
+    "php": "^8.0.2||^8.0",
     "fruitcake/laravel-cors": "^2.0.5",
     "guzzlehttp/guzzle": "^7.5",
     "laravel/framework": "^9.0",
@@ -16,6 +16,7 @@
     "laravel/sanctum": "^2.14",
     "laravel/tinker": "^2.7",
     "livewire/livewire": "^2.5",
+    "maatwebsite/excel": "^3.1",
     "mckenziearts/laravel-notify": "^2.3",
     "orangehill/iseed": "^3.0",
     "spatie/laravel-permission": "^5.9",
