--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "laravel/jetstream": "^2.12",
     "laravel/sanctum": "^2.14",
     "laravel/tinker": "^2.7",
+    "league/flysystem-aws-s3-v3": "^3.15",
     "livewire/livewire": "^2.5",
     "maatwebsite/excel": "^3.1",
     "mckenziearts/laravel-notify": "^2.3",
